[package]
name = "synth"
version = "0.1.0"
edition = "2021"

[lib]
crate-type = ["cdylib"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
fundsp = "0.9.0"
nih_plug = { git = "https://github.com/robbert-vdh/nih-plug" }

[workspace]
members = ["xtask"]